--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swr": "^0.2.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.0.0-next.12",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
